--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">StudyPartner2</string>
+    <string name="app_name">StudyPartner</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="send_button">Send</string>
