search by course works

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="send_button">Send</string>
     <string name="message_desc">Type here</string>
-    <string name="profile_name">Sapir</string>
+    <string name="profile_name">Profile</string>
     <string name="courses_title">Courses</string>
     <string name="list_of_courses">67521</string>
 
