--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">StudyPartner</string>
+    <string name="app_name">StudyWithMe</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="send_button">Send</string>
@@ -16,6 +16,5 @@
     <string name="menu_profile">Profile</string>
 
     <string name="register_title">Welcome</string>
-
 
 </resources>
