--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="send_button">Send</string>
     <string name="message_desc">Type here</string>
     <string name="profile_name">Profile</string>
+    <string name="profile_preferences">Preferences</string>
+    <string name="profile_preferences_study">Preferred Study Time</string>
     <string name="courses_title">Courses</string>
     <string name="list_of_courses">67521</string>
 
